--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+	<input id="dec5" type="radio" name="t">
+	<label for="dec5">December 5, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">30</span><span class="ball text-xl">11</span><span class="ball text-xl">23</span><span class="ball text-xl">15</span><span class="ball text-xl">14</span><span class="ball text-xl">21</span></p>
+	<h4>Jackpot Prize : &#8369;26,855,390</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     <div class="tab blue">
      <input id="Dec2" type="radio" name="t">
      <label for="Dec2">December 2, 2017</label>
      <div class="tab-content">
