--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -184,12 +184,12 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">33</span><span class="ball">22</span><span class="ball">8</span><span class="ball">42</span><span class="ball">1</span><span class="ball">10</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 4, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 6, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;29,700,000</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
 	<h4>Number of Winners : ?</h4>
 	</div><a name="49Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Grand-lotto-6-55-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -236,13 +236,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4 ><span class="ball">44</span><span class="ball">8</span><span class="ball">6</span><span class="ball">30</span><span class="ball">3</span><span class="ball">18</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 4, 2017</b></span></h4>
+	<h4 ><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 6, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;64,342,544</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
