--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -478,6 +478,17 @@ function openNav() {
 	}
 	}</script>
 	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
