--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+	<input id="dec6" type="radio" name="t">
+	<label for="dec6">December 6, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">48</span><span class="ball text-xl">54</span><span class="ball text-xl">12</span><span class="ball text-xl">18</span><span class="ball text-xl">52</span><span class="ball text-xl">10</span></p>
+	<h4>Jackpot Prize : &#8369;29,700,000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     <div class="tab blue">
      <input id="Dec4" type="radio" name="t">
      <label for="Dec4">December 4, 2017</label>
      <div class="tab-content">
