--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+	<input id="dec6" type="radio" name="t">
+	<label for="dec6">December 6, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">10</span><span class="ball text-xl">3</span><span class="ball text-xl">2</span><span class="ball text-xl">36</span><span class="ball text-xl">9</span><span class="ball text-xl">4</span></p>
+	<h4>Jackpot Prize : &#8369;69,288,029</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     <div class="tab blue">
      <input id="Dec4" type="radio" name="t">
      <label for="Dec4">December 4, 2017</label>
      <div class="tab-content">
