--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -205,13 +205,13 @@ function openNav() {
 	<br>
 	<img src="images/6-49.png" alt="Super Lotto 6/49 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Super lotto 6/49 result</strong></span></h2>
-	<h4><span class="ball">19</span><span class="ball">21</span><span class="ball">23</span><span class="ball">17</span><span class="ball">25</span><span class="ball">37</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 5, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 7, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;15,840.000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -257,13 +257,13 @@ function openNav() {
 	<br>
 	<img src="images/6-42.png" alt="PCSO Lotto 6/42 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>PCSO lotto 6/42 result</strong></span></h2>
-	<h4 ><span class="ball">30</span><span class="ball">11</span><span class="ball">23</span><span class="ball">15</span><span class="ball">14</span><span class="ball">21</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 5, 2017</b></span></h4>
+	<h4 ><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 7, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;26,855,390</h4>
-	<h4>Number of Winners : 1</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="SwertresResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/PCSO-lotto-6-42-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -399,8 +399,8 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">3</span><span class="ball">6</span><span class="ball">2</span><span class="ball">6</span><span class="ball">9</span><span class="ball">3</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 5, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 7, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
