--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -211,7 +211,7 @@ function openNav() {
 	<div class="half">
 	<div class="jackpot">
 	<h4>Jackpot Prize : &#8369;15,840,000</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -263,7 +263,7 @@ function openNav() {
 	<div class="half">
 	<div class="jackpot">
 	<h4>Jackpot Prize : &#8369;5,940,000</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="SwertresResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/PCSO-lotto-6-42-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
