--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+		     <div class="tab blue">
+	<input id="dec7" type="radio" name="t">
+	<label for="dec7">December 7, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">21</span><span class="ball text-xl">24</span><span class="ball text-xl">10</span><span class="ball text-xl">37</span><span class="ball text-xl">27</span><span class="ball text-xl">9</span></p>
+	<h4>Jackpot Prize : &#8369;5,940,000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
 	<input id="dec5" type="radio" name="t">
 	<label for="dec5">December 5, 2017</label>
 	<div class="tab-content">
