--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -163,13 +163,13 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">39</span><span class="ball">57</span><span class="ball">1</span><span class="ball">20</span><span class="ball">40</span><span class="ball">22</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 5, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 8, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;121,795,296</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -236,13 +236,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4 ><span class="ball">10</span><span class="ball">3</span><span class="ball">2</span><span class="ball">36</span><span class="ball">9</span><span class="ball">4</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 6, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 8, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;5,940,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
