--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -142,6 +142,18 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     
+	     <div class="tab blue">
+     <input id="dec8" type="radio" name="t">
+     <label for="dec8">December 8, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">13</span><span class="ball text-xl">51</span><span class="ball text-xl">28</span><span class="ball text-xl">5</span><span class="ball text-xl">44</span><span class="ball text-xl">4</span></p>
+     <h4>Jackpot Prize : &#8369;126,633,300</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
 	     <div class="tab blue">
 	<input id="dec5" type="radio" name="t">
 	<label for="dec5">December 5, 2017</label>
