--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -142,6 +142,18 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     
+	     <div class="tab blue">
+     <input id="dec8" type="radio" name="t">
+     <label for="dec8">December 8, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">32</span><span class="ball text-xl">19</span><span class="ball text-xl">14</span><span class="ball text-xl">20</span><span class="ball text-xl">40</span><span class="ball text-xl">25</span></p>
+     <h4>Jackpot Prize : &#8369;75,965,265</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
 	     <div class="tab blue">
 	<input id="dec6" type="radio" name="t">
 	<label for="dec6">December 6, 2017</label>
