--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -184,12 +184,12 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4><span class="ball">37</span><span class="ball">33</span><span class="ball">51</span><span class="ball">28</span><span class="ball">55</span><span class="ball">7</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>December 9, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Jackpot Prize : &#8369;29,700,000</h4>
 	<h4>Number of Winners : ?</h4>
 	</div><a name="49Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Grand-lotto-6-55-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
