--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -142,6 +142,18 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     
+	     <div class="tab blue">
+	<input id="dec9" type="radio" name="t">
+	<label for="dec9">December 9, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">37</span><span class="ball text-xl">33</span><span class="ball text-xl">51</span><span class="ball text-xl">28</span><span class="ball text-xl">55</span><span class="ball text-xl">7</span></p>
+	<h4>Jackpot Prize : &#8369;29,700,000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
 	     <div class="tab blue">
 	<input id="dec6" type="radio" name="t">
 	<label for="dec6">December 6, 2017</label>
