--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -163,13 +163,13 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">13</span><span class="ball">51</span><span class="ball">28</span><span class="ball">5</span><span class="ball">44</span><span class="ball">4</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 8, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 10, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;126,633,300</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -205,13 +205,13 @@ function openNav() {
 	<br>
 	<img src="images/6-49.png" alt="Super Lotto 6/49 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Super lotto 6/49 result</strong></span></h2>
-	<h4><span class="ball">37</span><span class="ball">28</span><span class="ball">45</span><span class="ball">22</span><span class="ball">23</span><span class="ball">9</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 7, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 10, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;15,840,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
