--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -142,6 +142,18 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     
+	     <div class="tab blue">
+	<input id="dec9" type="radio" name="t">
+	<label for="dec9">December 10, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">42</span><span class="ball text-xl">4</span><span class="ball text-xl">20</span><span class="ball text-xl">30</span><span class="ball text-xl">5</span><span class="ball text-xl">3</span></p>
+	<h4>Jackpot Prize : &#8369;15,840,000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
 	     <div class="tab blue">
 	<input id="dec7" type="radio" name="t">
 	<label for="dec7">December 7, 2017</label>
