--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -307,7 +307,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -362,7 +362,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">30</span>&nbsp;&nbsp;<span class="ball text-xl">26</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -378,7 +378,7 @@ function openNav() {
 	<br>
 	<img src="images/4-Digit.png" alt="PCSO 4-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>4-Digit Game result</strong></span></h2>
-	<h4><span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span></h4>
+	<h4><span class="ball">0</span>&nbsp;<span class="ball">5</span>&nbsp;<span class="ball">0</span>&nbsp;<span class="ball">7</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>December 11, 2017</b></span></h4>
 	</div>
 	<div class="half">
