--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+	<input id="dec11" type="radio" name="t">
+	<label for="dec11">December 11, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">11</span><span class="ball text-xl">45</span><span class="ball text-xl">41</span><span class="ball text-xl">33</span><span class="ball text-xl">15</span><span class="ball text-xl">25</span></p>
+	<h4>Jackpot Prize : &#8369;79,375,464</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     
+	     <div class="tab blue">
      <input id="dec8" type="radio" name="t">
      <label for="dec8">December 8, 2017</label>
      <div class="tab-content">
