--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+	<input id="dec12" type="radio" name="t">
+	<label for="dec12">December 12, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">26</span><span class="ball text-xl">49</span><span class="ball text-xl">22</span><span class="ball text-xl">3</span><span class="ball text-xl">41</span><span class="ball text-xl">44</span></p>
+	<h4>Jackpot Prize : &#8369;136,296,836</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     
+	     <div class="tab blue">
 	<input id="dec9" type="radio" name="t">
 	<label for="dec9">December 10, 2017</label>
 	<div class="tab-content">
