--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+	<input id="dec14" type="radio" name="t">
+	<label for="dec14">December 14, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">14</span><span class="ball text-xl">5</span><span class="ball text-xl">16</span><span class="ball text-xl">28</span><span class="ball text-xl">23</span><span class="ball text-xl">1</span></p>
+	<h4>Jackpot Prize : &#8369;5,940,000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     
+	     <div class="tab blue">
 	<input id="dec12" type="radio" name="t">
 	<label for="dec12">December 12, 2017</label>
 	<div class="tab-content">
