--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -278,7 +278,7 @@ function openNav() {
 	<br>
 	<img src="images/Swertres.png" alt="Swertres Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Swertres lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 15, 2017</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 16, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -293,21 +293,21 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">8</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -333,7 +333,7 @@ function openNav() {
 	<br>
 	<img src="images/EZ2lotto.png" alt="PCSO EZ 2 Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>EZ 2 lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 15, 2017</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 16, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -348,21 +348,21 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">12</span>&nbsp;&nbsp;<span class="ball text-xl">12</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">12</span>&nbsp;&nbsp;<span class="ball text-xl">17</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">31</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
