--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	    
 	     <div class="tab blue">
+     <input id="dec16" type="radio" name="t">
+     <label for="dec16">December 16, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">47</span><span class="ball text-xl">45</span><span class="ball text-xl">26</span><span class="ball text-xl">9</span><span class="ball text-xl">50</span><span class="ball text-xl">3</span></p>
+     <h4>Jackpot Prize : &#8369;29,700,000</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
 	<input id="dec13" type="radio" name="t">
 	<label for="dec13">December 13, 2017</label>
 	<div class="tab-content">
