--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -18,7 +18,7 @@
 <meta property="twitter:title" content="PCSO Lotto Results - Official and Verified PCSO Lotto Results" /> 
 <meta property="twitter:description" content="Looking for the latest PCSO Lotto results? Ready to discover if you're dreams are about to come true? You're in the right place. Click here to see the result of you favorite lotto game." />
 <meta property="fb:app_id" content="376018332850934" />
-	<meta property="og:title" content="PCSO Lotto Results - Official and Verified PCSO Lotto Results" /> 
+	<meta property="og:title" content="Official and Verified PCSO Lotto Results" /> 
 <meta property="og:type" content="article" /> 
 <meta property="og:locale" content="en_US" />
 <meta property="og:locale:alternate" content="tl_PH" />
