--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -163,12 +163,12 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">51</span><span class="ball">39</span><span class="ball">38</span><span class="ball">43</span><span class="ball">25</span><span class="ball">2</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 15, 2017</b></span></h4>
+	<h4><span class="ball">22</span><span class="ball">35</span><span class="ball">45</span><span class="ball">40</span><span class="ball">37</span><span class="ball">26</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 17, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;141,572,552</h4>
+	<h4>Jackpot Prize : &#8369;146,793,404</h4>
 	<h4>Number of Winners : 0</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -205,12 +205,12 @@ function openNav() {
 	<br>
 	<img src="images/6-49.png" alt="Super Lotto 6/49 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Super lotto 6/49 result</strong></span></h2>
-	<h4><span class="ball">37</span><span class="ball">33</span><span class="ball">35</span><span class="ball">6</span><span class="ball">8</span><span class="ball">28</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 14, 2017</b></span></h4>
+	<h4><span class="ball">28</span><span class="ball">32</span><span class="ball">37</span><span class="ball">26</span><span class="ball">36</span><span class="ball">35</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 17, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;17,506,761</h4>
+	<h4>Jackpot Prize : &#8369;20,702,259</h4>
 	<h4>Number of Winners : 0</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -307,7 +307,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -362,7 +362,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">29</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
