--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec17" type="radio" name="t">
+     <label for="dec17">December 17, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">28</span><span class="ball text-xl">32</span><span class="ball text-xl">37</span><span class="ball text-xl">26</span><span class="ball text-xl">36</span><span class="ball text-xl">35</span></p>
+     <h4>Jackpot Prize : &#8369;20,702,259</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
 	<input id="dec14" type="radio" name="t">
 	<label for="dec14">December 14, 2017</label>
 	<div class="tab-content">
