--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec17" type="radio" name="t">
+     <label for="dec17">December 17, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">22</span><span class="ball text-xl">35</span><span class="ball text-xl">45</span><span class="ball text-xl">40</span><span class="ball text-xl">37</span><span class="ball text-xl">26</span></p>
+     <h4>Jackpot Prize : &#8369;146,793,404</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
      <input id="dec15" type="radio" name="t">
      <label for="dec15">December 15, 2017</label>
      <div class="tab-content">
