--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -53,8 +53,8 @@ div.scroll {border:1px solid #ccc; border-radius:3px; width: 100%; height: 100px
 	<div style="max-width:1175px; margin:auto">
 	<nav>
 	<a href="../Index.html" class="hov hide-s">Home</a>
-	<a href="../pcso-lotto-and-games.html" class="hov hide-s">PCSO Lotto & Games</a>
-	<a href="../results-and-winnings.html" class="hide-s" style="color:#ffffff; border-bottom:3px solid white;">Results & Winnings</a>
+	<a href="../pcso-lotto-and-games.html" class="hov hide-s">PCSO Lotto &amp; Games</a>
+	<a href="../results-and-winnings.html" class="hide-s" style="color:#ffffff; border-bottom:3px solid white;">Results &amp; Winnings</a>
 	<a href="#" class="hov hide-s">FAQs</a>
 	</nav></div></div>
 	
@@ -67,8 +67,8 @@ div.scroll {border:1px solid #ccc; border-radius:3px; width: 100%; height: 100px
 	<div id="mySidenav" class="sidenav" style="height:100%; width:0; position:fixed; z-index:1; top:0; left:0; overflow-x:hidden; transition:0.4s; padding-top:60px; background:#2d89ef">
 	<a href="javascript:void(0)" style="position:absolute; top:0; right:25px; font-size:36px; margin-left:50px;" onclick="closeNav()">&times;</a>
 	<a href="../Index.html">Home</a>
-	<a href="../pcso-lotto-and-games.html">Lotto & Games</a>
-	<a href="../results-and-winnings.html">Results & Winnings</a>
+	<a href="../pcso-lotto-and-games.html">Lotto &amp; Games</a>
+	<a href="../results-and-winnings.html">Results &amp; Winnings</a>
 	<a href="Swertres-results.html" style="border:1px solid #f2f2f2; border-radius:6px; margin-right:20px; margin-left:20px; font-size:20px">&#x276f;&nbsp;&nbsp;PCSO Swertres</a>
 	<a href="#">FAQs</a>
 	</div>
@@ -96,26 +96,26 @@ function openNav() {
 	(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
 	
-	<h1 class="capital" style="color:#4B77BE"><strong>Swertres Result Today</strong></span></h1>
+	<h1 class="capital" style="color:#4B77BE"><strong>Swertres Result Today</strong></h1>
 	<img src="../images/Swertres-result.png" alt="PCSO Swertres Lotto Result" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> Swertres draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-	<h2 style="color:#4B77BE">Monday, December 18, 2017</time></h2>
+	<h2 style="color:#4B77BE">Monday, December 18, 2017</h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
-	<tr><td>11 AM</time></td>
+	<tr><td>11 AM</td>
 	<td><span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">1</span></td></tr>
-	<tr><td>4 PM</time></td>
+	<tr><td>4 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
-	<tr><td>9 PM</time></td>
+	<tr><td>9 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the three (3) winning numbers in <b>exact</b> order.</p>
 	<p><b>See also :</b>
 	<br>The official <a href="../results-and-winnings/ez-2-lotto-results.html" title="EZ2 Result today" style="text-decoration:none; color:#2d89ef">EZ2 Lotto Result</a> today.
-	<br>The official <a href="../results-and-winnings.html" title="Lotto result today" style="text-decoration:none; color:#2d89ef">December 18, 2017</time> Lotto results</a></p>
+	<br>The official <a href="../results-and-winnings.html" title="Lotto result today" style="text-decoration:none; color:#2d89ef">December 18, 2017 Lotto results</a></p>
 	
 	<h3 style="color:#4B77BE;"><strong>Suertres Prizes for today's draw</strong></h3>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -273,7 +273,7 @@ function openNav() {
 	</div></div></div>
 	
 	<script type="application/ld+json">{"@context": "http://schema.org", "@type": "WebSite", "name": "Lotto Info Philippines", "url": "https://lottoinfo.ph/", "potentialAction": {"@type": "SearchAction", "target": "https://lottoinfo.ph/?s={search_term_string}", "query-input": "required name=search_term_string"}}</script>
-	<script type="application/ld+json">{"@context": "http://schema.org", "@type": "Organization", "address": {"@type": "PostalAddress", "addressCountry": "Philippines"}, "email": "hello(at)lottoinfo.ph", "logo": {"@type": "ImageObject", "url": "https://lottoinfo.ph/logo.png"}, "name": "Lotto Info Philippines"}</script>
+	<script type="application/ld+json">{"@context": "http://schema.org", "@type": "Organization", "address": {"@type": "PostalAddress", "addressCountry": "Philippines"}, "url": "https://lottoinfo.ph", "email": "hello(at)lottoinfo.ph", "logo": {"@type": "ImageObject", "url": "https://lottoinfo.ph/logo.png"}, "name": "Lotto Info Philippines"}</script>
 	<script type=application/ld+json>{"@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": {"@type": "EntryPoint",
 	"url": "https://lottoinfo.ph/results-and-winnings/Swertres-results",
 	"urlTemplate": "https://lottoinfo.ph/results-and-winnings/Swertres-results"}}</script>
@@ -306,7 +306,7 @@ function openNav() {
 </div>
 
 <div class="side">
-	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto & games</b></h4>  
+	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto &amp; games</b></h4>  
   	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html">Ultra lotto 6/58</a></p>
   	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html">Grand lotto 6/55</a></p>
 	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html">Super lotto 6/49</a></p>
@@ -334,8 +334,8 @@ function openNav() {
 <div class="side">
  <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Site Map</b></h4>
  <p><a href="../Index.html">Home</a></p>
- <p><a href="../PCSO-Lotto-and-Games.html" title="PCSO Lotto and Games">PCSO Lotto & Games</a></p>
- <p><a href="../results-and-winnings.html" title="PCSO Results Today">Results & Winnings</a></p>
+ <p><a href="../PCSO-Lotto-and-Games.html" title="PCSO Lotto and Games">PCSO Lotto &amp; Games</a></p>
+ <p><a href="../results-and-winnings.html" title="PCSO Results Today">Results &amp; Winnings</a></p>
  <p><a href="">FAQs</a></p>
  <br>
  <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Lotto Info Philippines</b></h4>
