--- a/Swertres-results/December-17-2017.html
+++ b/Swertres-results/December-17-2017.html
@@ -121,16 +121,16 @@ function openNav() {
     <div class="half">
     <h3 style="color:#4B77BE;"><strong>Previous Swertres Results</strong></h3>
     <div class="scroll">
-    <p><a href="../December-16-2017.html" rel="bookmark" title="Swertres Result December 16 2017">December 16, 2017</a></p>
-    <p><a href="../December-15-2017.html" rel="bookmark" title="Swertres Result December 15 2017">December 15, 2017</a></p>
-    <p><a href="../December-14-2017.html" rel="bookmark" title="Swertres Result December 14 2017">December 14, 2017</a></p>
-    <p><a href="../December-13-2017.html" rel="bookmark" title="Swertres Result December 13 2017">December 13, 2017</a></p>
-    <p><a href="../December-12-2017.html" rel="bookmark" title="Swertres Result December 12 2017">December 12, 2017</a></p>
-    <p><a href="../December-11-2017.html" rel="bookmark" title="Swertres Result December 11 2017">December 11, 2017</a></p>
-    <p><a href="../December-10-2017.html" rel="bookmark" title="Swertres Result December 10 2017">December 10, 2017</a></p>
-    <p><a href="../December-9-2017.html" rel="bookmark" title="Swertres Result December 9 2017">December 9, 2017</a></p>
-    <p><a href="../December-8-2017.html" rel="bookmark" title="Swertres Result December 8 2017">December 8, 2017</a></p>
-    <p><a href="../December-7-2017.html" rel="bookmark" title="Swertres Result December 7 2017">December 7, 2017</a></p>
+    <p><a href="December-16-2017.html" rel="bookmark" title="Swertres Result December 16 2017">December 16, 2017</a></p>
+    <p><a href="December-15-2017.html" rel="bookmark" title="Swertres Result December 15 2017">December 15, 2017</a></p>
+    <p><a href="December-14-2017.html" rel="bookmark" title="Swertres Result December 14 2017">December 14, 2017</a></p>
+    <p><a href="December-13-2017.html" rel="bookmark" title="Swertres Result December 13 2017">December 13, 2017</a></p>
+    <p><a href="December-12-2017.html" rel="bookmark" title="Swertres Result December 12 2017">December 12, 2017</a></p>
+    <p><a href="December-11-2017.html" rel="bookmark" title="Swertres Result December 11 2017">December 11, 2017</a></p>
+    <p><a href="December-10-2017.html" rel="bookmark" title="Swertres Result December 10 2017">December 10, 2017</a></p>
+    <p><a href="December-9-2017.html" rel="bookmark" title="Swertres Result December 9 2017">December 9, 2017</a></p>
+    <p><a href="December-8-2017.html" rel="bookmark" title="Swertres Result December 8 2017">December 8, 2017</a></p>
+    <p><a href="December-7-2017.html" rel="bookmark" title="Swertres Result December 7 2017">December 7, 2017</a></p>
     <p></p>
     </div></div>
     
