--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -193,7 +193,7 @@ function openNav() {
     <!-- Lotto Results -->
     
     <div class="half">
-    <h3 style="color:#4B77BE;"><strong>Swertres Results By Months</strong></h3>
+    <h3 style="color:#4B77BE;"><strong>PCSO Lotto Results</strong></h3>
     <div class="scroll">
     <p><a href="../lotto-results/December-18-2017.html" rel="bookmark" title="Lotto Result December 18 2017">December 18, 2017</a></p>
     <p><a href="../lotto-results/December-17-2017.html" rel="bookmark" title="Lotto Result December 17 2017">December 17, 2017</a></p>
