--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -113,7 +113,7 @@ function openNav() {
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
 	<p><b>See also :</b></p>
 	<ul>
-	<li>The official <a href="../results-and-winnings/Swertres-results.html" title="Swertres Result today" style="text-decoration:none; color:#2d89ef">EZ2 Lotto Result</a> today.</li>
+	<li>The official <a href="../results-and-winnings/Swertres-results.html" title="Swertres Result today" style="text-decoration:none; color:#2d89ef">Swertres Result</a> today.</li>
 	<li>Today's<a href="../results-and-winnings.html" title="Lotto result Today" style="text-decoration:none; color:#2d89ef"> Lotto results summary</a></li>
 	</ul>
 	<h3 style="color:#4B77BE;"><strong>Suertres Prizes for today's draw</strong></h3>
