--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -107,7 +107,7 @@ function openNav() {
 	<tr><td>4 PM</td>
 	<td><span class="ball text-xl">16</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">17</span>&nbsp;&nbsp;<span class="ball text-xl">15</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
