--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -109,7 +109,7 @@ function openNav() {
 	<tr><td>4 PM</td>
 	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">0</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the three (3) winning numbers in <b>exact</b> order.</p>
