--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec20" type="radio" name="t">
+     <label for="dec20">December 20, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">10</span><span class="ball text-xl">14</span><span class="ball text-xl">16</span><span class="ball text-xl">25</span><span class="ball text-xl">11</span><span class="ball text-xl">27</span></p>
+     <h4>Jackpot Prize : &#8369;8,910,000</h4>
+     <h4>Number of Winners : 1</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
      <input id="dec18" type="radio" name="t">
      <label for="dec18">December 18, 2017</label>
      <div class="tab-content">
